# airwv

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7d57d7dfc357_baseline_schema.py
deploy/: README.md
deploy/systemd/: airwv-airnow-backfill.service  airwv-airnow-backfill.timer  airwv-airnow.service  airwv-airnow.timer  airwv-collect.service  airwv-collect.timer  airwv-reference.service  airwv-reference.timer  airwv-water.service  airwv-water.timer  airwv-web.service
docs/: ARCHITECTURE.md  BACKFILL.md  COMMUNITY-REPORTING.md  DATA-SOURCES.md  FRONTEND.md  PURPLEAIR-POINTS.md  STREETVIEW-SETUP.md  WIND-AND-DISPERSION.md  purpleair-followup-draft.md
scripts/: enrich_wells_proximity.py  fetch_abandoned_wells.py  fetch_coal_npdes.py  fetch_dep_mining.py  fetch_dep_permits.py  fetch_facility_status.py  fetch_nrc_spills.py  fetch_reference.py  fetch_sdwa.py  fetch_sources.py  fetch_water_samples.py  fetch_water_sources.py  fetch_wind.py  seed_events.py  split_banner.py
src/airwv/: __init__.py  alerts.py  config.py  correction.py  export_utils.py  ingest.py  registry.py  reporting.py  resolve.py  sources_enrich.py  validate.py  wvgeo.py
src/airwv/analysis/: __init__.py  anomaly.py  events.py  health.py  patterns.py  regional.py  trends.py
src/airwv/data/: __init__.py  abandoned_wells.json  coal_npdes.json  dep_mining.json  dep_permits.json  echo_facilities.json  nrc_spills.json  reference_monitors.json  sdwa_systems.json  sources.json  wind_roses.json  wv_sensors.sample.json
src/airwv/notify/: __init__.py  base.py  chat.py  email.py  webhook.py
src/airwv/sources/: __init__.py  base.py  openaq.py  purpleair.py
src/airwv/storage/: __init__.py  models.py  store.py
src/airwv/web/: __init__.py  __main__.py  app.py
src/airwv/web/static/: README.md  admin.js  alerts.js  app.css  app.js  areas.js  data.js  events.js  field.js  haze.js  learn.js  near_me.js  overview.js  reporting.js  sources.js  spills.js  water.js  (+1 more)
tests/: test_alerts.py  test_analyze.py  test_anomaly.py  test_correction.py  test_events.py  test_export_baseline.py  test_health.py  test_ingest.py  test_ingest_validate.py  test_notify.py  test_openaq.py  test_patterns.py  test_purpleair.py  test_registry.py  test_reporting.py  test_reports_schema.py  test_resolve.py  test_sources_enrich.py  test_store.py  test_trends.py  test_validate.py  test_web.py
(+16 files in other folders)
